git-annex (4.20130816) UNRELEASED; urgency=low

  * Debian: Run the builtin test suite as an autopkgtest.
  * Debian: Recommend ssh-askpass, which ssh will use when the assistant
    is run w/o a tty. Closes: #719832
  * sync, merge: Bug fix: Don't try to merge into master when in a bare repo.
  * import: Add options to control handling of duplicate files:
    --duplicate, --deduplicate, and --clean-duplicates
  * mirror: New command, makes two repositories contain the same set of files.
  * Set --clobber when running wget to ensure resuming works properly.
  * unused: Pay attention to symlinks that are not yet staged in the index.
  * Unescape characters in 'file://...' URIs. (Thanks, guilhem for the patch.)
  * Better error message when trying to use a git remote that has annex.ignore
    set.
  * Fix bug that caused typechanged symlinks to be assumed to be unlocked
    files, so they were added to the annex by the pre-commit hook.

 -- Joey Hess <joeyh@debian.org>  Thu, 15 Aug 2013 15:47:52 +0200

git-annex (4.20130815) unstable; urgency=low

  * assistant, watcher: .gitignore files and other git ignores are now
    honored, when git 1.8.4 or newer is installed.
    (Thanks, Adam Spiers, for getting the necessary support into git for this.)
  * importfeed: Ignores transient problems with feeds. Only exits nonzero
    when a feed has repeatedly had a problems for at least 1 day.
  * importfeed: Fix handling of dots in extensions.
  * Windows: Added support for encrypted special remotes.
  * Windows: Fixed permissions problem that prevented removing files
    from directory special remote. Directory special remotes now fully usable.

 -- Joey Hess <joeyh@debian.org>  Thu, 15 Aug 2013 10:14:33 +0200

git-annex (4.20130802) unstable; urgency=low

  * dropunused behavior change: Now refuses to drop the last copy of a
    file, unless you use the --force.
    This was the last place in git-annex that could remove data referred